--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -34,20 +34,22 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PC5
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PB4
+Mcu.Pin14=PB5
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PC4
-Mcu.Pin8=PC5
-Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.Pin3=PC0
+Mcu.Pin4=PC1
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -56,6 +58,8 @@ MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -91,6 +95,18 @@ PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC0.GPIO_Label=TOUCH_IRQ
+PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC0.GPIO_PuPd=GPIO_PULLUP
+PC0.Locked=true
+PC0.Signal=GPXTI0
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC1.GPIO_Label=SPINDLE_ENC
+PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPXTI1
 PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=SPI_TFT_RESET
 PC4.Locked=true
@@ -122,7 +138,7 @@ ProjectManager.DeviceId=STM32F407VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x9000
+ProjectManager.HeapSize=0x1A000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -130,8 +146,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=test_board1.ioc
-ProjectManager.ProjectName=test_board1
+ProjectManager.ProjectFileName=lt10m_control.ioc
+ProjectManager.ProjectName=lt10m_control
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -174,6 +190,10 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
