--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -27,29 +27,44 @@ Mcu.IP1=FREERTOS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
-Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=SPI2
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB10
+Mcu.Pin17=PC6
+Mcu.Pin18=PC7
+Mcu.Pin19=PC8
 Mcu.Pin2=PH1-OSC_OUT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PD6
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PC0
 Mcu.Pin4=PC1
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=17
+Mcu.Pin5=PC2
+Mcu.Pin6=PC3
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -71,11 +86,26 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=LONGITUDIAL_FEED_PULSE
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.GPIOParameters=PinState,GPIO_Label
+PA1.GPIO_Label=LONGITUDAL_FEED_EN
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA4.GPIOParameters=PinState,GPIO_Label
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=LONGITUDAL_FEED_DIR
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI_TFT_CS
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
@@ -91,8 +121,16 @@ PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=SPI_TOUCH_SCK
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=SPI_LCD_MISO
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SPI_LCD_MOSI
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
 PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -107,6 +145,14 @@ PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Locked=true
 PC1.Signal=GPXTI1
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=SPI_TOUCH_MISO
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=SPI_TOUCH_MOSI
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
 PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=SPI_TFT_RESET
 PC4.Locked=true
@@ -116,6 +162,23 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=SPI_TFT_DC_RS
 PC5.Locked=true
 PC5.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=CROSS_FEED_PULSE
+PC6.Signal=S_TIM3_CH1
+PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIO_Label=CROSS_FEED_EN
+PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=CROSS_FEED_DIR
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PD6.GPIOParameters=PinState,GPIO_Label
+PD6.GPIO_Label=SPI_TOUCH_CS
+PD6.Locked=true
+PD6.PinState=GPIO_PIN_SET
+PD6.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=BUTTON_K0
 PE4.GPIO_PuPd=GPIO_PULLUP
@@ -156,7 +219,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -194,6 +257,10 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -201,15 +268,39 @@ SPI1.FirstBit=SPI_FIRSTBIT_MSB
 SPI1.IPParameters=VirtualType,Mode,Direction,FirstBit,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CLKPhase=SPI_PHASE_1EDGE
+SPI2.CalculateBaudRate=328.125 KBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=0xFFFF-1
 TIM1.Prescaler=168-1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM
+TIM2.OC1Preload_PWM=DISABLE
+TIM2.Period=1000
+TIM2.Prescaler=84-1
+TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1
+TIM3.OC1Preload_PWM=DISABLE
+TIM3.Period=1000
+TIM3.Prescaler=84-1
+TIM3.Pulse-PWM\ Generation1\ CH1=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
