--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -1,4 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
+ADC1.ContinuousConvMode=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ClockPrescaler,NbrOfConversion,EOCSelection
+ADC1.NbrOfConversion=1
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
@@ -22,54 +32,69 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=TIM1
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=TIM4
+Mcu.IP11=TIM5
+Mcu.IP12=USART1
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI2
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=13
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PE7
 Mcu.Pin16=PB10
-Mcu.Pin17=PC6
-Mcu.Pin18=PC7
-Mcu.Pin19=PC8
+Mcu.Pin17=PB15
+Mcu.Pin18=PD9
+Mcu.Pin19=PD10
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PD6
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PD11
+Mcu.Pin21=PD12
+Mcu.Pin22=PD13
+Mcu.Pin23=PD14
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PC0
+Mcu.Pin30=PA10
+Mcu.Pin31=PA15
+Mcu.Pin32=PD6
+Mcu.Pin33=PB4
+Mcu.Pin34=PB5
+Mcu.Pin35=PE1
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=29
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -89,26 +114,28 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=LONGITUDIAL_FEED_PULSE
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=PinState,GPIO_Label
-PA1.GPIO_Label=LONGITUDAL_FEED_EN
-PA1.Locked=true
-PA1.PinState=GPIO_PIN_SET
-PA1.Signal=GPIO_Output
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=SPINDLE_ENC
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Signal=S_TIM5_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=LONGITUDAL_FEED_DIR
-PA2.Locked=true
-PA2.Signal=GPIO_Output
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=LONGITUDIAL_FEED_PULSE
+PA15.GPIO_PuPd=GPIO_PULLDOWN
+PA15.Signal=S_TIM2_CH1_ETR
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA2.GPIO_Label=POTENTIOMETER
+PA2.GPIO_PuPd=GPIO_NOPULL
+PA2.Signal=ADCx_IN2
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI_TFT_CS
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
-PA4.PinState=GPIO_PIN_RESET
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SPI_TFT_CLK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
@@ -119,12 +146,22 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LED_D3
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=PinState,GPIO_Label
+PA8.GPIO_Label=LONGITUDAL_FEED_EN
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=SPI_TOUCH_SCK
+PB10.GPIO_Label=SPI_TOUCH_CLK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=BUTTON_UP
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=SPI_LCD_MISO
 PB4.Mode=Full_Duplex_Master
@@ -154,19 +191,21 @@ PC3.GPIO_Label=SPI_TOUCH_MOSI
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
 PC4.GPIOParameters=PinState,GPIO_Label
-PC4.GPIO_Label=SPI_TFT_RESET
+PC4.GPIO_Label=TFT_RESET
 PC4.Locked=true
 PC4.PinState=GPIO_PIN_RESET
 PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=SPI_TFT_DC_RS
+PC5.GPIO_Label=TFT_DC_RS
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=CROSS_FEED_PULSE
+PC6.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Signal=S_TIM3_CH1
-PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=CROSS_FEED_EN
+PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.Locked=true
 PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
@@ -174,16 +213,55 @@ PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=CROSS_FEED_DIR
 PC8.Locked=true
 PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=LONGITUDAL_FEED_DIR
+PC9.Locked=true
+PC9.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD10.GPIO_Label=BUTTON_LEFT
+PD10.GPIO_PuPd=GPIO_PULLUP
+PD10.Locked=true
+PD10.Signal=GPIO_Input
+PD11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD11.GPIO_Label=BUTTON_RIGHT
+PD11.GPIO_PuPd=GPIO_PULLUP
+PD11.Locked=true
+PD11.Signal=GPIO_Input
+PD12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD12.GPIO_Label=PANEL_ENC_B
+PD12.GPIO_PuPd=GPIO_PULLUP
+PD12.Signal=S_TIM4_CH1
+PD13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD13.GPIO_Label=PANEL_ENC_A
+PD13.GPIO_PuPd=GPIO_PULLUP
+PD13.Signal=S_TIM4_CH2
+PD14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD14.GPIO_Label=PANEL_ENC_BUTTON
+PD14.GPIO_PuPd=GPIO_PULLUP
+PD14.Locked=true
+PD14.Signal=GPIO_Input
 PD6.GPIOParameters=PinState,GPIO_Label
 PD6.GPIO_Label=SPI_TOUCH_CS
 PD6.Locked=true
 PD6.PinState=GPIO_PIN_SET
 PD6.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE4.GPIO_Label=BUTTON_K0
-PE4.GPIO_PuPd=GPIO_PULLUP
+PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD9.GPIO_Label=BUTTON_DOWN
+PD9.GPIO_PuPd=GPIO_PULLUP
+PD9.Locked=true
+PD9.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE1.GPIO_Label=SWITCH_RUN
+PE1.GPIO_PuPd=GPIO_PULLUP
+PE1.Locked=true
+PE1.Signal=GPIO_Input
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PE7.GPIOParameters=PinState,GPIO_Label
+PE7.GPIO_Label=SPI_TFT2_CS
+PE7.Locked=true
+PE7.PinState=GPIO_PIN_SET
+PE7.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -219,7 +297,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -253,6 +331,8 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
@@ -261,6 +341,12 @@ SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
+SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Input_Capture1_from_TI1
+SH.S_TIM5_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -278,19 +364,30 @@ SPI2.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=0xFFFF-1
 TIM1.Prescaler=168-1
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM,OCPolarity_1
 TIM2.OC1Preload_PWM=DISABLE
+TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM2.Period=1000
-TIM2.Prescaler=84-1
+TIM2.Prescaler=840-1
 TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1,OCPolarity_1,AutoReloadPreload
 TIM3.OC1Preload_PWM=DISABLE
+TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM3.Period=1000
-TIM3.Prescaler=84-1
+TIM3.Prescaler=840-1
 TIM3.Pulse-PWM\ Generation1\ CH1=1
+TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period
+TIM4.Period=0xFFFF-1
+TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM5.IPParameters=Channel-Input_Capture1_from_TI1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
