--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -73,22 +73,23 @@ Mcu.Pin28=PA8
 Mcu.Pin29=PA9
 Mcu.Pin3=PC0
 Mcu.Pin30=PA10
-Mcu.Pin31=PA15
-Mcu.Pin32=PD6
-Mcu.Pin33=PB4
-Mcu.Pin34=PB5
-Mcu.Pin35=PE1
-Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=PA11
+Mcu.Pin32=PA15
+Mcu.Pin33=PD6
+Mcu.Pin34=PB4
+Mcu.Pin35=PB5
+Mcu.Pin36=PE1
+Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PC1
+Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -120,6 +121,10 @@ PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Signal=S_TIM5_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=SWITCH_TOUCH_LOCK
+PA11.GPIO_PuPd=GPIO_PULLUP
+PA11.Signal=GPIO_Input
 PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA15.GPIO_Label=LONGITUDIAL_FEED_PULSE
 PA15.GPIO_PuPd=GPIO_PULLDOWN
