implement and finished testiong high/low speed tool tip movement

--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -75,21 +75,23 @@ Mcu.Pin3=PC0
 Mcu.Pin30=PA10
 Mcu.Pin31=PA11
 Mcu.Pin32=PA15
-Mcu.Pin33=PD6
-Mcu.Pin34=PB4
-Mcu.Pin35=PB5
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=PD0
+Mcu.Pin34=PD1
+Mcu.Pin35=PD6
+Mcu.Pin36=PB4
+Mcu.Pin37=PB5
+Mcu.Pin38=PE1
+Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PC1
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=41
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -222,6 +224,16 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=LONGITUDAL_FEED_DIR
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD0.GPIO_Label=SWITCH_GAP_COMPENSATION
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.Signal=GPIO_Input
+PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD1.GPIO_Label=SWITCH_HIGH_SPEED
+PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.Locked=true
+PD1.Signal=GPIO_Input
 PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=BUTTON_LEFT
 PD10.GPIO_PuPd=GPIO_PULLUP
@@ -375,7 +387,7 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generat
 TIM2.OC1Preload_PWM=DISABLE
 TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM2.Period=1000
-TIM2.Prescaler=840-1
+TIM2.Prescaler=84-1
 TIM2.Pulse-PWM\ Generation1\ CH1=1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -383,7 +395,7 @@ TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pu
 TIM3.OC1Preload_PWM=DISABLE
 TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM3.Period=1000
-TIM3.Prescaler=840-1
+TIM3.Prescaler=84-1
 TIM3.Pulse-PWM\ Generation1\ CH1=1
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
