--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -36,7 +36,9 @@ Mcu.IP0=ADC1
 Mcu.IP1=DMA
 Mcu.IP10=TIM4
 Mcu.IP11=TIM5
-Mcu.IP12=USART1
+Mcu.IP12=TIM8
+Mcu.IP13=TIM9
+Mcu.IP14=USART1
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -45,7 +47,7 @@ Mcu.IP6=SPI2
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=13
+Mcu.IPNb=15
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -84,14 +86,21 @@ Mcu.Pin38=PE1
 Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PC1
 Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM2_VS_ControllerModeGated
+Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM8_VS_ControllerModeClock
+Mcu.Pin46=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin47=VP_TIM8_VS_OPM
+Mcu.Pin48=VP_TIM9_VS_ControllerModeClock
+Mcu.Pin49=VP_TIM9_VS_ClockSourceITR
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=43
+Mcu.PinsNb=50
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -114,8 +123,8 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=SPINDLE_ENC
@@ -314,7 +323,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM8_Init-TIM8-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -379,24 +388,28 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
-TIM1.Period=0xFFFF-1
+TIM1.Period=10000-1
 TIM1.Prescaler=168-1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM,OCPolarity_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM,OCPolarity_1,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM2.OC1Preload_PWM=DISABLE
 TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM2.Period=1000
 TIM2.Prescaler=84-1
 TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1,OCPolarity_1,AutoReloadPreload
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1,OCPolarity_1,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM3.OC1Preload_PWM=DISABLE
 TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM3.Period=1000
 TIM3.Prescaler=84-1
 TIM3.Pulse-PWM\ Generation1\ CH1=1
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
@@ -405,6 +418,14 @@ TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period
 TIM4.Period=0xFFFF-1
 TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM5.IPParameters=Channel-Input_Capture1_from_TI1
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM8.IPParameters=Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM8.Period=5000
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.IPParameters=Period,AutoReloadPreload
+TIM9.Period=500
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -413,8 +434,22 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeGated.Mode=Gated Mode
+VP_TIM2_VS_ControllerModeGated.Signal=TIM2_VS_ControllerModeGated
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
+VP_TIM8_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM8_VS_ControllerModeClock.Signal=TIM8_VS_ControllerModeClock
+VP_TIM8_VS_OPM.Mode=OPM_bit
+VP_TIM8_VS_OPM.Signal=TIM8_VS_OPM
+VP_TIM9_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM9_VS_ClockSourceITR.Signal=TIM9_VS_ClockSourceITR
+VP_TIM9_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM9_VS_ControllerModeClock.Signal=TIM9_VS_ControllerModeClock
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
