--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -36,9 +36,8 @@ Mcu.IP0=ADC1
 Mcu.IP1=DMA
 Mcu.IP10=TIM4
 Mcu.IP11=TIM5
-Mcu.IP12=TIM8
-Mcu.IP13=TIM9
-Mcu.IP14=USART1
+Mcu.IP12=TIM6
+Mcu.IP13=USART1
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -47,17 +46,17 @@ Mcu.IP6=SPI2
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=15
+Mcu.IPNb=14
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PE7
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PE7
+Mcu.Pin15=PE9
 Mcu.Pin16=PB10
 Mcu.Pin17=PB15
 Mcu.Pin18=PD9
@@ -76,31 +75,33 @@ Mcu.Pin29=PA9
 Mcu.Pin3=PC0
 Mcu.Pin30=PA10
 Mcu.Pin31=PA11
-Mcu.Pin32=PA15
-Mcu.Pin33=PD0
-Mcu.Pin34=PD1
-Mcu.Pin35=PD6
-Mcu.Pin36=PB4
-Mcu.Pin37=PB5
-Mcu.Pin38=PE1
-Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin32=PD0
+Mcu.Pin33=PD1
+Mcu.Pin34=PD6
+Mcu.Pin35=PB4
+Mcu.Pin36=PB5
+Mcu.Pin37=PE1
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_TIM1_VS_ControllerModeGated
 Mcu.Pin4=PC1
 Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM2_VS_ControllerModeGated
-Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin42=VP_TIM2_VS_ControllerModeClock
 Mcu.Pin43=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM8_VS_ControllerModeClock
-Mcu.Pin46=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin47=VP_TIM8_VS_OPM
-Mcu.Pin48=VP_TIM9_VS_ControllerModeClock
-Mcu.Pin49=VP_TIM9_VS_ClockSourceITR
+Mcu.Pin44=VP_TIM2_VS_OPM
+Mcu.Pin45=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin48=VP_TIM5_VS_ControllerModeClock
+Mcu.Pin49=VP_TIM5_VS_ClockSourceITR
 Mcu.Pin5=PC2
+Mcu.Pin50=VP_TIM5_VS_OPM
+Mcu.Pin51=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA2
-Mcu.Pin9=PA4
-Mcu.PinsNb=50
+Mcu.Pin7=PA2
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -123,23 +124,16 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=SPINDLE_ENC
-PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
-PA0-WKUP.Signal=S_TIM5_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=SWITCH_TOUCH_LOCK
 PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Signal=GPIO_Input
-PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA15.GPIO_Label=LONGITUDIAL_FEED_PULSE
-PA15.GPIO_PuPd=GPIO_PULLDOWN
-PA15.Signal=S_TIM2_CH1_ETR
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=POTENTIOMETER
 PA2.GPIO_PuPd=GPIO_NOPULL
@@ -288,6 +282,10 @@ PE7.GPIO_Label=SPI_TFT2_CS
 PE7.Locked=true
 PE7.PinState=GPIO_PIN_SET
 PE7.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE9.GPIO_Label=LONGITUDAL_FEED_PULSE
+PE9.GPIO_PuPd=GPIO_PULLDOWN
+PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -363,16 +361,14 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM5_CH1.0=TIM5_CH1,Input_Capture1_from_TI1
-SH.S_TIM5_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -387,18 +383,19 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-TIM1.IPParameters=Prescaler,Period
-TIM1.Period=10000-1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,OC1Preload_PWM,OCPolarity_1
+TIM1.OC1Preload_PWM=DISABLE
+TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM1.Period=1000
 TIM1.Prescaler=168-1
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload,OC1Preload_PWM,OCPolarity_1,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
-TIM2.OC1Preload_PWM=DISABLE
-TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
-TIM2.Period=1000
-TIM2.Prescaler=84-1
-TIM2.Pulse-PWM\ Generation1\ CH1=1
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM1.Pulse-PWM\ Generation1\ CH1=1
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM2.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM2.Period=5000
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -416,40 +413,43 @@ TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period
 TIM4.Period=0xFFFF-1
-TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-Input_Capture1_from_TI1
-TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM8.IPParameters=Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
-TIM8.Period=5000
-TIM8.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
-TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM9.IPParameters=Period,AutoReloadPreload
-TIM9.Period=500
+TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM5.Period=5000
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=1000
+TIM6.Prescaler=84-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
+VP_TIM1_VS_ControllerModeGated.Mode=Gated Mode
+VP_TIM1_VS_ControllerModeGated.Signal=TIM1_VS_ControllerModeGated
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
-VP_TIM2_VS_ControllerModeGated.Mode=Gated Mode
-VP_TIM2_VS_ControllerModeGated.Signal=TIM2_VS_ControllerModeGated
+VP_TIM2_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM2_VS_ControllerModeClock.Signal=TIM2_VS_ControllerModeClock
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR1
-VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
-VP_TIM8_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM8_VS_ControllerModeClock.Signal=TIM8_VS_ControllerModeClock
-VP_TIM8_VS_OPM.Mode=OPM_bit
-VP_TIM8_VS_OPM.Signal=TIM8_VS_OPM
-VP_TIM9_VS_ClockSourceITR.Mode=TriggerSource_ITR1
-VP_TIM9_VS_ClockSourceITR.Signal=TIM9_VS_ClockSourceITR
-VP_TIM9_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM9_VS_ControllerModeClock.Signal=TIM9_VS_ControllerModeClock
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR2
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
+VP_TIM3_VS_ControllerModeGated.Mode=Gated Mode
+VP_TIM3_VS_ControllerModeGated.Signal=TIM3_VS_ControllerModeGated
+VP_TIM5_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM5_VS_ClockSourceITR.Signal=TIM5_VS_ClockSourceITR
+VP_TIM5_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM5_VS_ControllerModeClock.Signal=TIM5_VS_ControllerModeClock
+VP_TIM5_VS_OPM.Mode=OPM_bit
+VP_TIM5_VS_OPM.Signal=TIM5_VS_OPM
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
