--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -367,7 +367,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true,15-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -451,7 +451,7 @@ TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM12.IPParameters=Slave_TriggerPolarity
 TIM12.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_BOTHEDGE
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM2.IC2Polarity=TIM_ICPOLARITY_FALLING
