--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -349,7 +349,7 @@ ProjectManager.DeviceId=STM32F407VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x1A000
+ProjectManager.HeapSize=0x19000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
