implement automatic feed. only easy scenario. redesign ui_items

--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -471,10 +471,13 @@ TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
-TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IC1Filter=15
+TIM4.IC1Polarity=TIM_ICPOLARITY_RISING
+TIM4.IC2Filter=15
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period
+TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period,Prescaler,IC1Filter,IC2Filter
 TIM4.Period=0xFFFF-1
+TIM4.Prescaler=4-1
 TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
 TIM5.IC1Polarity=TIM_ICPOLARITY_FALLING
